# ChangeLog for app-portage/esearch
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.125 2014/11/26 10:41:10 pacho Exp $

  26 Nov 2014; Pacho Ramos <pacho@gentoo.org> esearch-1.3-r1.ebuild,
  esearch-9999.ebuild:
  Support python 3.4

  22 May 2014; Paul Varner <fuzzyray@gentoo.org>
  +files/1.3-Fix-python-3-compatability.patch:
  Restore 1.3-Fix-python-3-compatability.patch which was removed by accident.

  14 May 2014; Agostino Sarubbo <ago@gentoo.org> esearch-1.3-r1.ebuild:
  Stable for sparc, wrt bug #505118

  13 May 2014; Agostino Sarubbo <ago@gentoo.org>
  -files/1.3-Fix-python-3-compatability.patch, esearch-1.3-r1.ebuild:
  Stable for ia64, wrt bug #505118

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org> esearch-1.3-r1.ebuild:
  Stable for ppc64, wrt bug #505118

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> esearch-1.3-r1.ebuild:
  Stable for alpha, wrt bug #505118

  13 Apr 2014; Agostino Sarubbo <ago@gentoo.org> esearch-1.3-r1.ebuild:
  Stable for ppc, wrt bug #505118

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> esearch-1.3-r1.ebuild:
  Stable for x86, wrt bug #505118

  01 Apr 2014; Markus Meier <maekke@gentoo.org> esearch-1.3-r1.ebuild:
  arm stable, bug #505118

  29 Mar 2014; Chema Alonso <nimiux@gentoo.org> esearch-1.3-r1.ebuild:
  Stable for amd64 wrt bug #505118

  26 Mar 2014; Jeroen Roovers <jer@gentoo.org> esearch-1.3-r1.ebuild:
  Stable for HPPA (bug #505118).

*esearch-1.3-r1 (13 Feb 2014)

  13 Feb 2014; Paul Varner <fuzzyray@gentoo.org> -esearch-1.0-r2.ebuild,
  -esearch-1.1-r2.ebuild, -esearch-1.2.ebuild, +esearch-1.3-r1.ebuild,
  esearch-9999.ebuild, -files/1.0-fix-EPREFIX-capability.patch,
  +files/1.3-Fix-python-3-compatability.patch,
  -files/1.0-fix-portage-eprefix-compatibility.patch,
  -files/1.1-Reprint-warnings-detected-during-layman-sync-API.patch,
  -files/1.1-Use-of-undefined-variable-in-sync.patch,