@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/esearch-9999.ebuild,v 1.7 2014/11/26 10:41:10 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/esearch-9999.ebuild,v 1.8 2015/03/02 22:27:33 fuzzyray Exp $
 
 EAPI="5"
 PYTHON_COMPAT=(python{2_6,2_7,3_2,3_3,3_4})
@@ -11,7 +11,7 @@ inherit distutils-r1 git-2
 EGIT_REPO_URI="git://github.com/fuzzyray/esearch.git"
 
 DESCRIPTION="Replacement for 'emerge --search' with search-index"
-HOMEPAGE="http://david-peter.de/esearch.html"
+HOMEPAGE="https://github.com/fuzzyray/esearch"
 SRC_URI=""
 
 LICENSE="GPL-2"
