@@ -2,11 +2,11 @@ DEFINED_PHASES=compile configure install prepare test unpack
 DEPEND=sys-apps/portage python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[readline(+)] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[readline(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[readline(+)] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-)] dev-vcs/git
 DESCRIPTION=Replacement for 'emerge --search' with search-index
 EAPI=5
-HOMEPAGE=http://david-peter.de/esearch.html
+HOMEPAGE=https://github.com/fuzzyray/esearch
 IUSE=linguas_fr linguas_it python_targets_python2_7 python_targets_python3_3 python_targets_python3_4
 LICENSE=GPL-2
 RDEPEND=sys-apps/portage python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[readline(+)] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[readline(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[readline(+)] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_3 python_targets_python3_4 )
 SLOT=0
 _eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	998e5931fb95b10a6a11ec796ada2759	git-2	e28f0d8a9b321431b1e699782851b827	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	331701099758706863819fe3ff6ddc8a	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=594fba8482525277893d442ebdfc959b
+_md5_=f1e0b3e11d2a5dbacce2de9f78ef2ab1
