@@ -3,11 +3,11 @@ DEPEND=dev-libs/libnl:3 sys-apps/pciutils sys-libs/ncurses[unicode?] virtual/pkg
 DESCRIPTION=tool that helps you find what software is using the most power
 EAPI=5
 HOMEPAGE=https://01.org/powertop/
-IUSE=unicode X
+IUSE=nls unicode X
 KEYWORDS=~amd64 ~arm ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=dev-libs/libnl:3 sys-apps/pciutils sys-libs/ncurses[unicode?] X? ( x11-apps/xset ) virtual/libintl
 SLOT=0
 SRC_URI=https://01.org/sites/default/files/downloads/powertop/powertop-2.7.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=1a1b2236d03e0ca9b3723c4f44836296
+_md5_=236bea9c6c9569629048365c30c7d612
