@@ -17,25 +17,25 @@ DIST powertop-2.7.tar.gz 654329 SHA256 8d4b1490e2baad4467c0ded3c423db4472dcbf7b2
 EBUILD powertop-1.13.ebuild 1158 SHA256 b996887bff17065a57aac201aac438a2c6310f5423109e4cb62de10c3e3dfdfd SHA512 c1ed8ee2fd7416138b9ab84072766071047e557ffc35fc57d32d8e4dc86f8986fa3a642f1875e2cf929eeabeb8a0b20025babc27808602b1123c970869c51146 WHIRLPOOL 570c6c80e97351859f9758b581a103a1a98d6c5ee58a63b4277431f21bcef9bed94ee35e3ed0193259a44978aa7aac717c597db4cba2aaa2d201ffe13998610f
 EBUILD powertop-2.5.ebuild 3378 SHA256 7e59cf6687b3b6d6ae7c5045c508d2a5d4b37819783e9af419ba0826df167e40 SHA512 2cff8cfe282f475bcf32356073f0b34418e14b376d08c7353b8426bfb83198dfc411f6d2945b8bbe0ed4e4f228f62d6504d84c460c5cfba064e0afe47453b1f8 WHIRLPOOL 2a22cb3a1307a667dae0fe93f96f583cd20ce1b9b9fa8691d9f31d765cc1331022dc556b6599a11d4fde8e0ae95f2c2452d86284daf33a0bb822abda441c2d44
 EBUILD powertop-2.6.ebuild 3340 SHA256 a1b366fd6c6c0968d063e99daba70b8f829f39017d900d24bb53406597fa25eb SHA512 a7d4dacc75e0b6b9f2c08e8e9ded30f43e5c6d32ae7362cc3e738183b606ed7d0b23e9e173133b4cc1f5666dfdffc33556f5d379c36dec819c6b89372bc1adfe WHIRLPOOL 7669891cb85c23cc8c6cfbf965c1e3235aa70d7d745ac1587499a1ebe837e5e82f984d79734338fc228885864fabbb7576b92b2cc9f202ccf85fdec76004f15e
-EBUILD powertop-2.7-r1.ebuild 3305 SHA256 e746fc84ecef3375c67cecff5bf6b46486acedbbf97e27d230b72d2996d2378e SHA512 400ea9ea562c3a906b8043c51e348ba9665097584ec777b9736e2529400c20d851cb1b02770cc99c6c05c18e26ce8123ab35c9087c9485e2b87bce609d87f856 WHIRLPOOL 17b6d08462eaa59fb23869f903b0be15a90d01694347985e2708b51206e50fd702dd51eed6c75e10f3248b9af2b0f8f29065c9486f38e6730db2f4f2a14eb631
+EBUILD powertop-2.7-r1.ebuild 3325 SHA256 5e2aaa5bbf92cf6c75ff59858b0b05a3294a49b10b5f02079c44154cf0d1692e SHA512 96e1eb1674a343f0648bc99a67801a1ff672a77f12863dd03d98eb09e7ce52f5999820ad3216fec7dc17ec6dde274c4946ebe036aa57abed90c685707cf4e25b WHIRLPOOL 0c814fd2fa3c3c4956d406d5d8300966b425d4d920f2a1312488221588f3cb4d9250a4d8bb1fd7566e56885e2094cceaad0e949cc8ec2bf8bb33a2084ddf3830
 EBUILD powertop-2.7.ebuild 3282 SHA256 b7db1bd6ae18f3ed8c2f9405f5587471fabd85fd08f6563ea6cc5a2c5fe32f57 SHA512 15aff0bc07130cbe7aa78d3858dd8a82b4502111964fd6a8d165036b3c94f06a3b797091ef57f06b3429b7bf0930f3f638210cbec2a37e6e9d748520edb65936 WHIRLPOOL 71d091a7d58c2ed8c14c874f09fd144c21f60dfde0fce46272ef2215ebc3ff6a235347a2251794c331b88be5b99c1127da640075f1dd7b4bd4ee313efc182536
 EBUILD powertop-9999.ebuild 3284 SHA256 a9499b4db51632fcadb6e3840c456137b2d6ab1b659c92e932fe771c52ab9091 SHA512 27b4e7e00934a75502eb888a81aede48dcac32be7a8af203ed715d3d1312d191cda0d57d0d41f180b25a7ec7a0446fa49778812162194873d20ccf8695e33e65 WHIRLPOOL afac2120c3634f1e035c5b073a22ca9d5c0807f560986a4270f95d887a00b7ad19c71e47f0511991d9769400cf17cd22e6335e7e11b559add2787c86f6948966
-MISC ChangeLog 15755 SHA256 87d46b7e7496c0c80e539c5efcbecbc9a602587148d73761e37597f3c649e2a8 SHA512 571abb46d13776ace9b3b567dca0e49c73874565be341a5fe97951a0e2edbc19f4863d2bbbc86bae89dd4ba1ec032731257ff2d9761d9867a7ce270e520c2a4d WHIRLPOOL 281c391293eeb24d9dac009ce96d722451212823c8f2777801a2d4ee839b759ee7875b777a8b329feab0182a5c6da501c935ee65c5390496c7af1aef400d452b
+MISC ChangeLog 15879 SHA256 3dc444be8e57447241e78685fd9482549ff7593c9958cf2162eebce61be5a8ab SHA512 197b946126416c4f8b0bed841c00e2e0380b0dd42e11f5b6f65604f9723cd987184d014c7610460a676abe895db4fcc6d9ea624495707e1b9b0474f5e05dce28 WHIRLPOOL 8750d7020ba68a21f79da5e6a60fa57959ba4b89daaac12e03e05c0e1d7f542c155678b1e96856f16cdcc3917031a28e0c0a205fd8de11a4dcef9993db552555
 MISC metadata.xml 239 SHA256 24d3268dbe675a5446456b139438c1bd59bd6190077399a4a715805ef28da3cc SHA512 2fa025f3394a125b4a92ee5fdb579bcfe74755f4e4306d90979bbb04c5239adfd2fdf9242ee7623642909597100ca88a6f6b7578a24512d976930fad186e10f9 WHIRLPOOL ab1b126e1a8170eba68412f8704d38ac7a479cb80a461cb2466ad87966ab8f78ddc04ce66341e5056df8c3aa21e3cf2c530a1f3236461bb502b91842089b49bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9Ni7AAoJEPGu1DbS6WIAoZAP/jIJR2iAAVFBjKYtQLJgV0eS
-vl830j4e2op3lxQOzkcrFP1vvnqEzHReJapYAyphH0UPvw8TYyoLCFt0ACRpzeuP
-qE14irIgLXeBaBKT3tpq7e8Jl+Wj9DyH7O+4HtBPj2PmSlXGXX5tLNc1WxsWsK6u
-1ojum9MXkzVVXjZHeIMEwYnxhpsGBBb0qomk/MgNYJabu2m/gvgO9+uGJc0mgAkj
-kCNXAFGmjfiMaIpl8jlnPBDc5hPlN7yTXcNYPMttSNj+fK6lyHNjO9mG+Ueyua2Z
-ZEE6ljbK1u5slBPLtAhU1CjntgYZLkDHxj+Sw9+VwtHY5jUTtDhCAfZFkxBK/hnh
-pydEc6D0pDxlHNJWqJS0GE4qMuiM+GoXSm33g888wlWcGMPgnHmkENdgOYmBHbwJ
-BZVjfjguMU6jB0A+KRq8G35qEMraeY3t2hUqtL+iJeoucCwuu1IB4GQ9gBAAVIv8
-odIa1VhSAHhvxvQs8sz5Lq6Kx0c7KMriW07Ka0qFbgOTsFlDwdF4jwxtuxtOEAFR
-Sh6LArlDHq2rQQNyykudRGD2+k18axGt1Hh04A1RfX2wQct4OIxoFQshKFHCCYgm
-Xw4DTVqkiwKdHsfEbb9EEZ97q8XZ0kzxemv/bJHToVKWvutS6iCkFs+d65u6SByl
-+hpbPvzHXq8uN91nPLN9
-=BwY/
+iQIcBAEBCAAGBQJU9ONtAAoJEPGu1DbS6WIA/ZMP/iBMNvtymXTAtY9NcfEyOg85
+KbL1EBoLVhZhmBZ3jGTNuQ7Qjwrrbo1oPxLrlO++G007wijUiPwjEfBJ/EK7VGfO
+Vh5MpibhAtsj4K2e5gqFDvMWdTkGJ4sxl925flJEfb4pQyJmLY/V7iIBxm/5VmUt
+vDh5rn19kyejh94uXQl4yc/smJwzssBQTSWECVe8MCy90kibrJf896O2FpbD+k30
+otNzqg/0J968ixqmfG7034sqU4MYvBi1GOl+OzgRLvCGhJKVZzg9RWmXlqrjJ18d
+FLDO/Xg8sQnfjp7juyf8+8JK6sd1eA9y+/bMCzdQad28VdWDaJQTwxIXXpaS8BCh
+HziWx7535KMkdGjW+6vPKaI3+cLYnPAftud7pNq5CStGcWZyRJFiqE64OpLymnx2
+RltkJ6e76/EFoFKX7mbqAoOEuXp2f3vj+abHsp/dNUxdkR8cbM5AeWqMQ31NvAEH
+RPZItP7Mf1WGn0MTOwQQBUwPWW551VMfz6RzjWv/QddGglKRqg45rATepuHKmhLL
+6IwYPRFjaoqCGk70M6rfXTs3scjWFJq8i2JJwOLjI/oSOh30FhMEwnJkG/caDsB9
+3lnKtzNvIItCKZMrLkjeEYUhga/KPctxZzu50h28i8vwH2gu1fb1FpssfkjWxQ/s
+G9+SeDFT1tbujI3j4mEq
+=Z8gs
 -----END PGP SIGNATURE-----
