@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/powertop
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.109 2015/03/02 21:40:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.110 2015/03/02 22:25:47 vapier Exp $
+
+  02 Mar 2015; Mike Frysinger <vapier@gentoo.org> powertop-2.7-r1.ebuild:
+  Add USE=nls support #505366 by René Rhéaume.
 
 *powertop-2.7-r1 (02 Mar 2015)
 
