@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/esearch
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.125 2014/11/26 10:41:10 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.126 2015/03/02 22:27:33 fuzzyray Exp $
+
+  02 Mar 2015; Paul Varner <fuzzyray@gentoo.org> esearch-1.3-r1.ebuild,
+  esearch-9999.ebuild:
+  Change HOMEPAGE to github repository.
 
   26 Nov 2014; Pacho Ramos <pacho@gentoo.org> esearch-1.3-r1.ebuild,
   esearch-9999.ebuild:
